Updated index.html. Added block expirience,skills

--- a/contact-info.css
+++ b/contact-info.css
@@ -60,3 +60,10 @@
   border: 3px solid;
   border-color: var(--text-decoration-color);
 }
+.contact-info-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+    gap: 20px;
+    margin-bottom: 30px;
+  }
+  
